releases/debug.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: debug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
        - name: netshoot
          image: nicolaka/netshoot:latest
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
